# ovarian-cancer-regulatory-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/processed/: clinical_aligned.csv  cluster_assignments.csv  de_cluster2_vs_others.csv  gene_module_assignments.csv  hub_genes.csv  module_summary.csv  network_edges.csv  sample_patient_mapping.csv
data/raw/: data_clinical_patient.txt
notebooks/: 01_data_exploration.ipynb  02_patient_clustering.ipynb  03_coexpression_network.ipynb
